--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'//1128
+
 }
 
 tasks.named('bootBuildImage') {
